# tbuddy

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  frat-track.py  tbuddyConfig.cmake.in
benchmarks/: Makefile
benchmarks/generators/: Makefile  chess.py  chess4.py  mdparity.py  mdpcheck.py  writer.py
benchmarks/results-paper/: Makefile  fmcad.sh  format_data.py  noproof.sh
benchmarks/results-probe/: tprobe.py
benchmarks/results-tocl/: Makefile
bsat/benchmarks/: README.txt
bsat/regression/: 01-unsat2.cnf  04-chess-32.cnf  04-chess-32.order  05-pigeon-sinz-32.schedule  Makefile  regress.sh  regressd.sh
bsat/src/: Makefile  bsat.cpp  clause.cpp  clause.h  eval.cpp  teval.cpp
buddy/: CMakeLists.txt  config.h
buddy/include/: bdd.h  prover.h  pseudoboolean.h  tbdd.h
cadical/: assume.cpp  backward.cpp  bins.hpp  block.cpp  checker.cpp  clause.hpp  decompose.cpp  deduplicate.cpp  external.cpp  flags.hpp  gates.cpp  internal.cpp  internal.hpp  options.hpp  probe.cpp  propagate.cpp  random.hpp  subsume.cpp  ternary.cpp  tracer.cpp  vivify.cpp
doc/: schedule-format.txt
regression/: 05-pigeon-sinz-32.cnf  06-urquhart-li-09.cnf  Makefile  regress.sh  regressd.sh
scripts/: build_norm.sh  build_static.sh
src/: Makefile  bsat.cpp  clause.cpp  clause.h  eval-BDD.cpp  eval-TBDD.cpp  eval.cpp  teval.cpp
symbolic/: xor_solver.py
tbsat/: CMakeLists.txt
tbsat/src/: Makefile  bsat.cpp  sat_check.cpp  teval.cpp
tools/: cpp2tex  exutil.py  frat-matcher.py  frat-track.py  grab_data.py  grab_pair_data.py  probe.py  wrap.py  xor_extractor.py
(+927 files in other folders)
